Index.html: updated CSS
Custom rendering of x-editable elements (buttons floating to the right
and maximized widths of inputs)

--- a/index.html
+++ b/index.html
@@ -90,6 +90,21 @@
 			  padding-right: 15px;
 			}
 			
+			.editable-buttons {float: right;}
+			
+			.editable-container.editable-inline, .editableform > .control-group, .form-inline .form-control, .select2-container  {
+				width:100%;
+			}
+			
+			.editableform .control-group, .editable-position.form-group {
+				margin-left: 0px;
+				width:100%;
+			}
+			
+			/*.editable-position .form-group {
+				width:auto;
+			}*/
+			
 			/* Make textareas resizable only vertically */
 			textarea {resize: vertical;}
 			
